[metadata]
name = auto_archiver
version = attr: auto_archiver.__version__
author = Bellingcat
author_email = tech@bellingcat.com
description = Easily archive online media content
long_description = file: README.md
long_description_content_type = text/markdown
keywords = archive, oosi, osint, scraping
license = MIT
classifiers =
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3

[options]
setup_requires =
    setuptools-pipfile
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
find_packages=true
python_requires = >=3.8

# [options.package_data]
# * = *.txt, *.rst
# hello = *.msg

[options.entry_points]
console_scripts =
    auto-archiver = auto_archiver.__main__:main

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
where=src
# include=auto_archiver*
# exclude =
#     examples*
#     .eggs*
#     build*
#     secrets*
#     tmp*
#     docs*
#     src.tests*